Code quality, gui functionality and styling
Added:
  - Packages:
    - controller
    - model
    - view
  - Classes:
    - Utils in gui
  - Methods:
    - getDesc in Resources
    - pickRoom in GameController
    - roomSelection in GameController
    - showDesc in GameController
  - Variables:
    - String desc to Resources
  - Directory:
    - gameSounds
    - gameImages
  - Files:
    - cameron-hillman-highresscreenshot00002.jpg to resources/gameImages

Moved:
  - Classes:
    - all controllers to controller
    - View to view
    - Model to model
  - Methods:
    - loadFxml from View to Utils

Renamed:
  - Classes:
    - Model to GameModel
    - View to GameView

Edited:
  - Classes:
    - Resources
    - Room and child classes
    - KeyItemFactory
    - GameView
    - GameModel
    - GameController
    - FurnitureFactory
    - KeyItemFactory
    - Main
  - Constructor:
    - of Resources
    - of GameModel
    - of GameView
  - Methods:
    - getItemsInRoom in Room to return ObservableList<Item>
    - getKeyItemList in Room to return ObservableList<Item>
    - getNeededItem in Room and all child classes to return List<Integer>
    - createAllKeyItems in KeyItemFactory to return ObservableList<Item>
    - getRoomslist in GameModel to return ObservableList<Room>
    - getInventory in GameModel to return ObservableList<Item>
    - initialize in GameController
    - createAllKeyItems
  - Variables:
    - keyItemList in Room to an ObservableList<Item>
    - itemInRoom in Room to an ObservableList<Item>
  - Files:
    - gameScreen.css